--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>file.transfer</groupId>
   <artifactId>file.transfer</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>jar</packaging>
 
   <name>file.transfer</name>
@@ -42,7 +42,6 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<!-- mainClass>fileencryptdecrypt.FileEncryptDecrypt</mainClass -->
 							<mainClass>file.transfer.FileEncryptDecrypt</mainClass>
 						</manifest>
 					</archive>
